In Render() keys are now case insensitive closing #4.

--- a/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
+++ b/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="StringTemplateUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensionsUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StringTemplateEngine\StringTemplateEngine.csproj">
