--- a/StringTemplateEngine/StringTemplateEngine.csproj
+++ b/StringTemplateEngine/StringTemplateEngine.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="StringTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
