Create base TokenStream class #6

--- a/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
+++ b/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
@@ -50,7 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="StringTemplateUnitTest.cs" />
+    <Compile Include="TokenStreamUnitTests.cs" />
+    <Compile Include="StringTemplateUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionsUnitTests.cs" />
   </ItemGroup>
