--- a/StringTemplateEngine/StringTemplateEngine.csproj
+++ b/StringTemplateEngine/StringTemplateEngine.csproj
@@ -43,6 +43,7 @@
     <Compile Include="StringExtensions.cs" />
     <Compile Include="StringTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
