--- a/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
+++ b/StringTemplateEngine.UnitTests/StringTemplateEngine.UnitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="StringTemplateUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionsUnitTests.cs" />
+    <Compile Include="TokenUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StringTemplateEngine\StringTemplateEngine.csproj">
